RESOLVED FIXED73475
[Mac] Original page URL is not set in quarantine information when downloading using context menu Save Linked File
https://bugs.webkit.org/show_bug.cgi?id=73475
Summary [Mac] Original page URL is not set in quarantine information when downloading...
Alexey Proskuryakov
Reported 2011-11-30 11:18:11 PST
Safari does not set kLSQuarantineOriginURLKey when downloading via Save Linked File context menu. <rdar://problem/10500337>
Attachments
proposed patch (2.02 KB, patch)
2011-11-30 11:24 PST, Alexey Proskuryakov
no flags
with export file changes (3.43 KB, patch)
2011-11-30 14:04 PST, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2011-11-30 11:24:06 PST
Created attachment 117235 [details] proposed patch
Alexey Proskuryakov
Comment 2 2011-11-30 14:04:06 PST
Created attachment 117271 [details] with export file changes
WebKit Review Bot
Comment 3 2011-11-30 21:55:50 PST
Comment on attachment 117271 [details] with export file changes Clearing flags on attachment: 117271 Committed r101607: <http://trac.webkit.org/changeset/101607>
WebKit Review Bot
Comment 4 2011-11-30 21:55:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.