third_party/WebKit/Source/WebKit2/WebProcess/WebProcess.cpp
@@ -60,6 +60,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <WebCore/CrossOriginPreflightResultCache.h>
 #include <WebCore/Font.h>
 #include <WebCore/FontCache.h>
+#include <WebCore/Frame.h>
 #include <WebCore/GCController.h>
 #include <WebCore/GlyphPageTreeNode.h>
 #include <WebCore/IconDatabase.h>
@@ -952,7 +953,10 @@ void WebProcess::downloadRequest(uint64_t downloadID, uint64_t initiatingPageID,
 {
     WebPage* initiatingPage = initiatingPageID ? webPage(initiatingPageID) : 0;
 
-    DownloadManager::shared().startDownload(downloadID, initiatingPage, request);
+    ResourceRequest requestWithOriginalURL = request;
+    initiatingPage->mainFrame()->loader()->setOriginalURLForDownloadRequest(requestWithOriginalURL);
+
+    DownloadManager::shared().startDownload(downloadID, initiatingPage, requestWithOriginalURL);
 }
 
 void WebProcess::cancelDownload(uint64_t downloadID)
